manifests/seraphim/prod/lazylibrarian/Namespace-lazylibrarian.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: lazylibrarian
