manifests/seraphim/prod/lazylibrarian/Service-lazylibrarian.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: lazylibrarian
    app.kubernetes.io/name: lazylibrarian
    app.kubernetes.io/part-of: lazylibrarian
    app.kubernetes.io/version: f42cfc3f-ls233
  name: lazylibrarian
  namespace: lazylibrarian
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: lazylibrarian
