manifests/seraphim/prod/lazylibrarian/HTTPRoute-lazylibrarian.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: lazylibrarian
    app.kubernetes.io/name: lazylibrarian
    app.kubernetes.io/part-of: lazylibrarian
    app.kubernetes.io/version: f42cfc3f-ls233
  name: lazylibrarian
  namespace: lazylibrarian
spec:
  hostnames:
    - lazylibrarian.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lazylibrarian
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
